# fd-inherit-test

./: Cargo.toml
.github/workflows/: tests.yml
src/: main.rs
tests/: async.rs  registered_fd_may_not_be_inherit.rs  sync.rs
