[package]
name = "fd-inherit-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.97"
tokio = { version = "1.7.0", features = ["macros", "rt", "process", "io-util"] }
tokio-pipe = "0.2.1"
